--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>All Solar System</title>
   </head>
   <body>
+    // main div
     <div class="sizer">
       <div class="wrapper">
         <div class="solar-system">
