--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     // main div
     <div class="sizer">
+      // second main part of div for wrapper
       <div class="wrapper">
         <div class="solar-system">
           <div class="positioner sun"></div>
