--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <div class="orbit positioner mercury">
             <div class="planet"></div>
           </div>
+          /div's for orbit position and venus
           <div class="orbit positioner venus">
             <div class="planet"></div>
           </div>
