--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
           <div class="orbit positioner mercury">
             <div class="planet"></div>
           </div>
-          /div's for orbit position and venus
+          //div's for orbit position and venus
           <div class="orbit positioner venus">
             <div class="planet"></div>
           </div>
           <div class="orbit positioner earth">
             <div class="planet"></div>
           </div>
+          // div for mars
           <div class="orbit positioner mars">
             <div class="planet"></div>
           </div>
