--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <div class="orbit positioner jupiter">
             <div class="planet"></div>
           </div>
+          // Saturn orbit
           <div class="orbit positioner saturn">
             <div class="planet"></div>
           </div>
