--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <div class="wrapper">
         <div class="solar-system">
           <div class="positioner sun"></div>
+          // sun oribit
           <div class="orbit positioner mercury">
             <div class="planet"></div>
           </div>
