--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <div class="orbit positioner venus">
             <div class="planet"></div>
           </div>
+          // earth orbit
           <div class="orbit positioner earth">
             <div class="planet"></div>
           </div>
