--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <div class="orbit positioner saturn">
             <div class="planet"></div>
           </div>
+          // uranus orbit
           <div class="orbit positioner uranus">
             <div class="planet"></div>
           </div>
