--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="sizer">
       <div class="wrapper">
         <div class="solar-system">
+          // sun oribit
           <div class="positioner sun"></div>
           <div class="orbit positioner mercury">
             <div class="planet"></div>
