--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="solar-system">
           // sun oribit
           <div class="positioner sun"></div>
+          // mercury oribit
           <div class="orbit positioner mercury">
             <div class="planet"></div>
           </div>
