--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <div class="orbit positioner venus">
             <div class="planet"></div>
           </div>
+          // earth oribit
           <div class="orbit positioner earth">
             <div class="planet"></div>
           </div>
