--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <div class="orbit positioner earth">
             <div class="planet"></div>
           </div>
+          // mars oribit
           <div class="orbit positioner mars">
             <div class="planet"></div>
           </div>
