--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="sizer">
       <div class="wrapper">
+        // include all solar systmes
         <div class="solar-system">
           
           <div class="positioner sun"></div>
