--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           </div>
           <div class="orbit positioner neptune">
             <div class="planet"></div>
+            //end
           </div>
         </div>
       </div>
