--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        // all solar system
         <div class="solar-system">
           <div class="positioner sun"></div>
-        
+        // mercury orbit
           <div class="orbit positioner mercury">
             <div class="planet"></div>
           </div>
