--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
        // all solar system
         <div class="solar-system">
           <div class="positioner sun"></div>
-        // mercury orbit
+        // mercury oribit
           <div class="orbit positioner mercury">
             <div class="planet"></div>
           </div>
-         
+         // venus oribit
           <div class="orbit positioner venus">
             <div class="planet"></div>
           </div>
