--- a/index.html
+++ b/index.html
@@ -9,25 +9,27 @@
   <body>
     <div class="sizer">
       <div class="wrapper">
-       // all solar system
+       //All solar system
         <div class="solar-system">
           <div class="positioner sun"></div>
-        // mercury oribit
+        // mercury orbit
           <div class="orbit positioner mercury">
             <div class="planet"></div>
           </div>
-         // venus oribit
+         // venus orbit
           <div class="orbit positioner venus">
             <div class="planet"></div>
           </div>
-        // earth orbit
+        //Earth orbit
           <div class="orbit positioner earth">
             <div class="planet"></div>
           </div>
-          // mars orbit
+          //Mars orbit
           <div class="orbit positioner mars">
             <div class="planet"></div>
           </div>
+
+          // Jupiter orbit
           <div class="orbit positioner jupiter">
             <div class="planet"></div>
           </div>
