--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
           <div class="orbit positioner saturn">
             <div class="planet"></div>
           </div>
+
+          // Uranus orbit
           <div class="orbit positioner uranus">
             <div class="planet"></div>
           </div>
