--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
           <div class="orbit positioner uranus">
             <div class="planet"></div>
           </div>
+
+          // Neptune orbit
           <div class="orbit positioner neptune">
             <div class="planet"></div>
             //end
