--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="planet"></div>
           </div>
 
-       
+       //  mars orbit
           <div class="orbit positioner jupiter">
             <div class="planet"></div>
           </div>
