--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="planet"></div>
           </div>
 
-   
+           // uranus orbit
           <div class="orbit positioner neptune">
             <div class="planet"></div>
             //end
