--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="planet"></div>
           </div>
 
-        
+          // neptune
           <div class="orbit positioner neptune">
             <div class="planet"></div>
             //end
