--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <div class="orbit positioner mars">
             <div class="planet"></div>
           </div>
-
-
+        
+          // Jupiter
           <div class="orbit positioner jupiter">
             <div class="planet"></div>
           </div>
