--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           <div class="orbit positioner uranus">
             <div class="planet"></div>
           </div>
-
-          
+            
+          // neptune
           <div class="orbit positioner neptune">
             <div class="planet"></div>
             //end
