--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="wrapper">
       // solar system
         <div class="solar-system">
-      
+      // sun
           <div class="positioner sun"></div>
       
           <div class="orbit positioner mercury">
