--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="orbit positioner jupiter">
             <div class="planet"></div>
           </div>
-       
+       // satrun
           <div class="orbit positioner saturn">
             <div class="planet"></div>
           </div>
@@ -43,7 +43,7 @@
             <div class="planet"></div>
           </div>
             
-        // saturn
+        // neptune
           <div class="orbit positioner neptune">
             <div class="planet"></div>
 
