--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="orbit positioner uranus">
             <div class="planet"></div>
           </div>
-       
+       // neptune
           <div class="orbit positioner neptune">
             <div class="planet"></div>
            
