--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="solar-system">
       // sun orbit
           <div class="positioner sun"></div>
-    
+         // mercury
           <div class="orbit positioner mercury">
             <div class="planet"></div>
           </div>
