--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="orbit positioner mercury">
             <div class="planet"></div>
           </div>
-       //venus orbit
+          //venus orbit
           <div class="orbit positioner venus">
             <div class="planet"></div>
           </div>
@@ -25,7 +25,7 @@
           <div class="orbit positioner earth">
             <div class="planet"></div>
           </div>
-         
+         // mars orbit
           <div class="orbit positioner mars">
             <div class="planet"></div>
           </div>
