--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="sizer">
       <div class="wrapper">
-       
+       // solar system
         <div class="solar-system">
          
           <div class="positioner sun"></div>
