--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="orbit positioner earth">
             <div class="planet"></div>
           </div>
-         
+          // mars orbit
           <div class="orbit positioner mars">
             <div class="planet"></div>
           </div>
