--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="orbit positioner uranus">
             <div class="planet"></div>
           </div>
-          
+          // neputne orbit
           <div class="orbit positioner neptune">
             <div class="planet"></div>
            
