--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="orbit positioner saturn">
             <div class="planet"></div>
           </div>
-          
+          // uranus orbiit
           <div class="orbit positioner uranus">
             <div class="planet"></div>
           </div>
