--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div class="sizer">
       <div class="wrapper">
-        // sun orbit
+        // all solar orbit
         <div class="solar-system">
-          
+          // sun orbit
           <div class="positioner sun"></div>
            
           <div class="orbit positioner mercury">
