--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -21,7 +21,7 @@
           <div class="orbit positioner venus">
             <div class="planet"></div>
           </div>
-          
+          // earth orbit
           <div class="orbit positioner earth">
             <div class="planet"></div>
           </div>
