--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="orbit positioner mercury">
             <div class="planet"></div>
           </div>
-           
+           // venus
           <div class="orbit positioner venus">
             <div class="planet"></div>
           </div>
