--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="orbit positioner uranus">
             <div class="planet"></div>
           </div>
-            
+            // neptune
           <div class="orbit positioner neptune">
             <div class="planet"></div>
           </div>
