--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="sizer">
       <div class="wrapper">
         <div class="solar-system">
-           
+           // sun
           <div class="positioner sun"></div>
-          
+          // mercury
           <div class="orbit positioner mercury">
             <div class="planet"></div>
           </div>
