--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           <div class="orbit positioner earth">
             <div class="planet"></div>
           </div>
-            
+            // mars
           <div class="orbit positioner mars">
             <div class="planet"></div>
           </div>
-             
+             // jupiter
           <div class="orbit positioner jupiter">
             <div class="planet"></div>
           </div>
