--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div class="solar-system">
            // sun
           <div class="positioner sun"></div>
-          
+          // mercury
           <div class="orbit positioner mercury">
             <div class="planet"></div>
           </div>
-        
+          // venus
           <div class="orbit positioner venus">
             <div class="planet"></div>
           </div>
