--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
           <div class="orbit positioner venus">
             <div class="planet"></div>
           </div>
-           
+           // earth
           <div class="orbit positioner earth">
             <div class="planet"></div>
           </div>
-            
+            //mars
           <div class="orbit positioner mars">
             <div class="planet"></div>
           </div>
