--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
           <div class="orbit positioner mars">
             <div class="planet"></div>
           </div>
-             
+             // jupiter
           <div class="orbit positioner jupiter">
             <div class="planet"></div>
           </div>
-           
+           // saturn
           <div class="orbit positioner saturn">
             <div class="planet"></div>
           </div>
