--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
           <div class="orbit positioner saturn">
             <div class="planet"></div>
           </div>
-           
+           //uranus
           <div class="orbit positioner uranus">
             <div class="planet"></div>
           </div>
-           
+           //neptune
           <div class="orbit positioner neptune">
             <div class="planet"></div>
           </div>
